Design the nav bar further

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <nav class="nav-bar">
+        <div class="logo">
+            Header Logo
+        </div>
         <ul>
-            <li>Logo</li>
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
