Creating the second section

--- a/index.html
+++ b/index.html
@@ -17,5 +17,15 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </nav>
+    <div class="sec-container">
+        <div class="first-part">
+            <div>This website is awesome</div>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="second-part">
+
+        </div>
+    </div>
 </body>
 </html>
