--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
             this is a placeholder for an image
         </div>
     </div>
+    <div class="third-container">
+        <div class="first-part">Some random information.</div>
+        <div class="second-part">
+            <div class="box-container">
+                <div class="box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="box-container">
+                <div class="box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="box-container">
+                <div class="box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="box-container">
+                <div class="box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
