--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
             </div>
         </div>
     </div>
+    <div class="forth-container">
+        <div class="first-part">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="second-part">-Thor, God of Thunder</div>
+    </div>
 </body>
 </html>
