--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
             <button>Sign up</button>
         </div>
     </div>
+    <footer>
+        Copyright © The Odin Project 2021
+    </footer>
 </body>
 </html>
